kubernetes/services/auth/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          command: ['/bin/sh']
          args: ['-c', 'while true; do sleep 30; done']
          image: pmcorrea/auth:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          volumeMounts:
            - name: cert-volume
              mountPath: '/app/packages/auth/tls/'
              readOnly: true
      volumes:
        - name: cert-volume
          secret:
            secretName: auth-cert
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`staging.stackheap.io`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: auth
          port: 443
  tls:
    secretName: auth-cert
